k8s/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urca-tournament-api
  labels:
    app: urca-tournament-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: urca-tournament-api
  template:
    metadata:
      labels:
        app: urca-tournament-api
    spec:
      containers:
        - name: urca-tournament-api
          image: ghcr.io/dmaxter/urca-tournament-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
