k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: urca-tournament-api
spec:
  selector:
    app: urca-tournament-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
