k8s/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: urca-tournament-web
spec:
  selector:
    app: urca-tournament-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
