k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urca-tournament
spec:
  selector:
    app: urca-tournament
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
