k8s/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: urca-tournament
spec:
  parentRefs:
    - name: urca-tournament
  hostnames:
    - "REPLACE_HOST"
  rules:
    - backendRefs:
        - name: urca-tournament
          port: 80
